ajuste textos, animaciones en pag bandalos

--- a/bandalos.html
+++ b/bandalos.html
@@ -91,7 +91,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--1">
                             <div class="subtitulo">
-                                <div class="bandalos__carta__subtitulo" ">
+                                <div class="bandalos__carta__subtitulo">
                                     <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Goyo</h3>
                                     <h3 class="bandalos__subtitulo__desktop">Goyo</h3>
                                     <p >Voz y teclado</p>
@@ -113,8 +113,8 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--3">
                             <div class="bandalos__carta__subtitulo ">
-                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Lobo</h3>
-                                <h3 class="bandalos__subtitulo__desktop">Lobo</h3>
+                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Nicolás</h3>
+                                <h3 class="bandalos__subtitulo__desktop">Nicolás</h3>
                                  <p >Bajo</p>
                             </div>
                         </div>
