--- a/musica.html
+++ b/musica.html
@@ -169,9 +169,12 @@
                             Es una poción, es la condición<br>
                             De estar en otra parte<br>
                             Es la adrenalina la que me domina<br>
-                            Siempre quiere más
+                            Siempre quiere más <br><br>
                             
-                            
+                            Dijiste que mis labios son amargos<br>
+                            Y que tenía que intentarlo mejor<br>
+                            Es facil encontrarte en cualquier lado<br>
+                            Si tu perfume es dueño de mi dolor
                            </p>
                         </div>
                       </div>
