--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   <div class="content">
                     <h2 class="title"><a >A 30 años de Cancion Animal</a></h2>
       
-                    <p class="text">Bandalos Chinos y su versión desechunfada de "Entre Canibales" a 30 años de Canción Animal.</p>
+                    <p class="text">Bandalos Chinos y su versión desenchunfada de "Entre Canibales" a 30 años de Canción Animal.</p>
                     <a href="https://tn.com.ar/videos/musica/hablamos-con/bandalos-chinos-y-su-version-desenchufada-de-entre-canibales-30-anos-de-cancion-animal_1102587" target="blank" >
                       <button type="button" class="btn noticias__botones--estilos ">Ver nota</button>
                       <span></span>
